[package]
name = "bc_utils_core"
version = "0.1.2"
edition = "2024"

[dependencies]
bc_utils_lg ={ git = "https://github.com/feUHMYHiEggtcIGA/bc_utils_lg.git"}
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = "1.4"

[dev-dependencies]
bc_exch_api_funcs = {git = "https://github.com/feUHMYHiEggtcIGA/bc_exch_api_funcs.git"}
